--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <title>Document</title>
 </head>
 <body>
+  <!--This exercise is part of traversy media youtube tutorial series-->
   <div class="container">
     <div class="split left">
       <h1>The Designer</h1>
       <a href="#" class="button">Read More</a>
     </div>
     <div class="split right">
-      <h1>The Designer</h1>
+      <h1>The Programmer</h1>
       <a href="#" class="button">Read More</a>
     </div>
     </div>
